
	* Added Feature #30190: Hook in module class (Thanks to Julia Pardanaud)
	* Fixed Bug #30438: validate-alpha-w-umlauts and validate-alphanum-w-umlaut in 1.6.4 broken (Thanks to Tobias)
	* Fixed Bug #30705: XLS export : unable to download in IE (Thanks to Julien Henchoz)
	* Removed header variable from mod1/class.tx_powermail_export.php as header()-function hasn't any return value

2012-06-21  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #38246: DB Error in ext:lib/class.tx_powermail_functions_div.php Line 427 (Thanks to Björn Heinermann)

2012-06-20  Nicole Cordes <cordes@cps-it.de>

	* Investigated in Bug #38173; Tab order radio buttons (Thanks to Björn Heinermann)

2012-06-14  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #37629: Non-mandatory radio checkboxes aren't working

2012-06-13  Nicole Cordes <cordes@cps-it.de>

	* Added t3lib_div::removeXSS functions for proper sanitizing
	* Fixed Bug #37992: urldecoded input "grows" when switching between input and confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #37991: Missing labels on confirmation page (Thanks to Philipp Kitzberger)
	* Fixed Bug #35534: Multiple Steps PHP looses user input in 1.6.6 (Thanks to Philipp Kitzberger)

2012-06-12  Nicole Cordes <cordes@cps-it.de>

	* Fixed back links to last page on multiple pages (server application)
	* Fixed Bug #30157: File Upload: Fields are shown twice (Thanks to Christian Herberger)
	* Fixed Bug #29772: non-mandatory selects are checked by custom validator (Thanks to Jacob)
	* Fixed Bug #29546: prefill doesn't work properly in select-boxes (Thanks to Mischa Heissmann)
	* Fixed Bug #29106: Wrong CSS Class for submit buttons
	* Fixed Task #29156: Replace mysql_* calls (Thanks to Tizian Schmidlin)
	* Fixed Bug #29093: PHP Warning
	* Fixed Bug #28911: DBAL/ADODB Support improvement (Thanks to Tizian Schmidlin)
	* Fixed deprecated functions for TYPO3 4.5

2012-06-11  Nicole Cordes <cordes@cps-it.de>

	* Raised TYPO3 version to 4.5.0